      anymore, but you shouldn't access the guts of an object anyway.
      Use ->repl instead.
    ! ->addTab , ->createTab and selectedTab have been moved to
      Firefox::Application.
      If you used these functions before, change:
          $mech->addTab( ... )
      to 
          $mech->application->addTab( ... )
    ! ->set_tab_content has been moved to Firefox::Application
      

0.38 20101119
    . Fix test for checking whether JS is enabled and whether it can be
      disabled to also work when the NoScript add-on is not installed.
    ! Fix test and code for ->response (and ->get()) when a HTTP proxy
      is set. This means that if you have a proxy, some of the response
      codes may differ from what you saw before. Some responses are now
      404 or 500 responses where they returned undef before.
    ! The response code should now more closely correspond to the first
      response actually fetched.
    . Always store (a reference to) the Javascript response even if we
      don't fetch it immediately.
    . The examples now have a common hashbang line
    . The examples don't use a private library directory anymore

0.37 20101115
    . Switch out the code in WWW::Mechanize::Firefox::DSL
      in favour of Object::Import, which is the same codebase
      but intended for a wider audience than just W:M:F.
    . ->current_form now gets reset on ->get and ->submit
    . The C<any> option to ->xpath() (and ->selector, ->is_visible,...)
      allows to search for multiple nodes that may or may not exist

0.36 20101017
    . Fix the mro.pm 5.10+ prerequisite by using the additional prerequisite
      MRO::Compat, which provides a transparent switch between mro.pm and its 
      own implementation for versions <5.9.x.
    . Make `use WWW::Mechanize::Firefox::DSL '$mech'` work silently
    . JS Errors when using ::DSL now get raised in the user code and not
      in ::Firefox or ::DSL

0.35 20101014